# graphBuilder

./: .gitignore  CMakeLists.txt  README.md  build.sh  graphBuilder.depend
include/: types.h
resource/gtk_widgets/: winMain.glade
src/: calcs.c  eventMethods.c  main.c  stack.c  winMethods.c
